
        BOOKKEEPER-668: Race between PerChannelBookieClient#channelDisconnected() and disconnect() calls can make clients hang while add/reading entries in case of multiple bookie failures (sijie & ivank via ivank)

        BOOKKEEPER-624: Reduce logs generated by ReplicationWorker (vinay via ivank)

        BOOKKEEPER-632: AutoRecovery should consider read only bookies (vinay via ivank)

      hedwig-server:

        BOOKKEEPER-601: readahead cache size isn't updated correctly (sijie via fpj)

        BOOKKEEPER-607: Filtered Messages Require ACK from Client Causes User Being Throttled Incorrectly Forever (sijie via ivank)

      hedwig-client:

        BOOKKEEPER-598: Fails to compile - RESUBSCRIBE_EXCEPTION conflict (Matthew Farrellee via sijie)

    IMPROVEMENTS:

      BOOKKEEPER-526: multiple threads for delivery manager (sijie via ivank)

      BOOKKEEPER-544: Modify hedwig server tests to allow client testcases to start/stop them as part of their tests (mridul via ivank)

      BOOKKEEPER-312: Implementation of JMS provider (mridul via ivank)

      BOOKKEEPER-556: BookieServerMXBean#getServerState makes no sense (ivank via sijie)

      BOOKKEEPER-574: Extend the bookkeeper shell to get a list of available bookies (ivank via umamahesh)

      BOOKKEEPER-576: Bookie client should use netty Decoder/Encoder (ivank via sijie)

      BOOKKEEPER-585: Auditor logs noisily when a ledger has been deleted (ivank via sijie)

      BOOKKEEPER-573: Script to start a bookkeeper cluster (ivank via sijie)

      BOOKKEEPER-557: Compiler error showing up badly with jdk 7 (ivank via sijie)

      BOOKKEEPER-583: Read from a ReadOnlyBookie fails if index fileinfo is not in ledger cache (vinay via sijie)

      BOOKKEEPER-611: Speed up bookkeeper tests (ivank via fpj)

      BOOKKEEPER-603: Support Boost 1.53 for Hedwig Cpp Client (jiannan via ivank)

      BOOKKEEPER-592: allow application to recommend ledger data locality (sijie via ivank)
